logoce.lmf.editor/src/main/grammar/lmf.bnf
{
  parserClass="org.logoce.lmf.editor.parser.LMParser"
  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="LMF"
  psiPackage="org.logoce.lmf.editor.psi"
  psiImplPackage="org.logoce.lmf.editor.psi.impl"

  elementTypeClass="org.logoce.lmf.editor.psi.LMElementType"
  tokenTypeClass="org.logoce.lmf.editor.psi.LMTokenType"
  elementTypeHolderClass="org.logoce.lmf.editor.psi.LMIntellijTokenTypes"

  tokens = [
    TYPE = 'TYPE'
    VALUE = 'VALUE'
    LIST_SEPARATOR = 'LIST_SEPARATOR'
    WHITE_SPACE = 'WHITE_SPACE'
    BAD_CHARACTER = 'BAD_CHARACTER'
    OPEN_NODE = 'OPEN_NODE'
    CLOSE_NODE = 'CLOSE_NODE'
    VALUE_NAME = 'VALUE_NAME'
    TYPE_NAME = 'TYPE_NAME'
    QUOTE = 'QUOTE'
    ASSIGN = 'ASSIGN'
  ]
}

lmFile ::= element*

element ::= OPEN_NODE (TYPE_NAME ASSIGN)? TYPE (word | WHITE_SPACE)* CLOSE_NODE WHITE_SPACE?

word ::= named | list | val | element

val ::= QUOTE? VALUE QUOTE?

named ::= NAME ASSIGN (list | val)

list ::= val (LIST_SEPARATOR val)+
